<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="?android:listSeparatorTextViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

  <TextView
      android:id="@+id/textview_poll_title"
      android:layout_width="wrap_content"
      android:layout_height="45dp"
      android:layout_marginLeft="0dp"
      android:layout_marginStart="0dp"
      android:layout_marginTop="0dp"
      android:text="@string/textview_poll_title"
      android:textAllCaps="false"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintLeft_toRightOf="@+id/imageview_poll"
      app:layout_constraintTop_toBottomOf="@+id/textview_completed"/>

  <TextView
      android:id="@+id/textview_completed"
      android:layout_width="344dp"
      android:layout_height="24dp"
      android:text="@string/textview_completed"
      android:textColor="@android:color/holo_red_light"
      android:textAlignment="center"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginStart="8dp"
      app:layout_constraintLeft_toLeftOf="parent"/>

  <TextView
      android:id="@+id/textview_description"
      android:layout_width="wrap_content"
      android:layout_height="58dp"
      android:layout_marginLeft="0dp"
      android:layout_marginRight="0dp"
      android:layout_marginTop="0dp"
      android:text="@string/textview_description"
      android:textSize="20sp"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintLeft_toRightOf="@+id/imageview_poll"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textview_poll_title"/>


  <ImageView
      android:id="@+id/imageview_poll"
      android:layout_width="76dp"
      android:layout_height="96dp"
      android:layout_marginStart="8dp"
      app:srcCompat="@drawable/ic_local_dining"
      android:layout_marginLeft="16dp"
      app:layout_constraintLeft_toLeftOf="parent"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/textview_completed"
      android:contentDescription="@string/ic_local_dinning"/>


</android.support.constraint.ConstraintLayout>