<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.summer.csula.foodvoter.PollActivity">


  <android.support.constraint.ConstraintLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="8dp"
      app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
      app:layout_constraintHorizontal_bias="0.555"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tab_layout_poll"
      app:layout_constraintVertical_bias="0.322">

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="319dp"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/edit_text_poll_title_hint"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_description"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="319dp"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/edit_text_poll_description_hint"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

  </android.support.constraint.ConstraintLayout>


  <Button
      android:id="@+id/button_submit_poll"
      android:layout_width="88dp"
      android:layout_height="0dp"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginStart="8dp"
      android:text="@string/button_submit"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"/>


  <android.support.design.widget.TabLayout
      android:id="@+id/tab_layout_poll"
      android:layout_width="368dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0">

    <android.support.design.widget.TabItem
        android:id="@+id/tab_item_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_item_settings"/>


    <android.support.design.widget.TabItem
        android:id="@+id/tab_item_invites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_item_invites"/>
  </android.support.design.widget.TabLayout>

  <android.support.constraint.ConstraintLayout
      android:id="@+id/constraintLayout3"
      android:layout_width="324dp"
      android:layout_height="141dp"
      android:layout_marginBottom="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

      <RadioButton
          android:id="@+id/radio_button_current_location"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="8dp"
          android:text="@string/radio_button_current_location"/>

      <RadioButton
          android:id="@+id/radio_button_use_zip_code"
          android:layout_width="145dp"
          android:layout_height="wrap_content"
          android:padding="8dp"
          android:text="@string/radio_button_use_zip_code"/>
    </RadioGroup>

    <EditText
        android:id="@+id/edit_text_zip_code"
        android:layout_width="296dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/edit_text_zip_code_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
  </android.support.constraint.ConstraintLayout>


  <android.support.constraint.ConstraintLayout
      android:id="@+id/constraintLayout4"
      android:layout_width="330dp"
      android:layout_height="89dp"
      android:layout_marginBottom="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      app:layout_constraintBottom_toTopOf="@+id/button_submit_poll"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent">


    <TextView
        android:id="@+id/text_view_price_filter"
        android:layout_width="181dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_view_price_filter"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/spinners_price"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="15dp"/>

    <Spinner
        android:id="@+id/spinners_price"
        android:layout_width="78dp"
        android:layout_height="27dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </Spinner>


    <TextView
        android:id="@+id/text_view_open_now"
        android:layout_width="179dp"
        android:layout_height="25dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/text_view_open_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/checkbox_open_now"/>

    <CheckBox
        android:id="@+id/checkbox_open_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

  </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
