<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <EditText
      android:id="@+id/edit_text_title"
      android:layout_width="319dp"
      android:layout_height="52dp"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginStart="8dp"
      android:hint="@string/edit_text_poll_title_hint"
      android:padding="16dp"
      app:layout_constraintHorizontal_bias="0.51"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="32dp"/>

  <EditText
      android:id="@+id/edit_text_description"
      android:layout_width="319dp"
      android:layout_height="52dp"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginStart="8dp"
      android:hint="@string/edit_text_poll_description_hint"
      android:padding="16dp"
      app:layout_constraintHorizontal_bias="0.51"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/edit_text_title"/>


  <android.support.constraint.ConstraintLayout
      android:id="@+id/constraintLayout3"
      android:layout_width="338dp"
      android:layout_height="107dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/edit_text_description">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

      <RadioButton
          android:id="@+id/radio_button_current_location"
          android:layout_width="wrap_content"
          android:checked="true"
          android:layout_height="wrap_content"
          android:padding="8dp"
          android:text="@string/radio_button_current_location"/>

      <RadioButton
          android:id="@+id/radio_button_use_zip_code"
          android:layout_width="145dp"
          android:layout_height="wrap_content"
          android:padding="8dp"
          android:text="@string/radio_button_use_zip_code"/>
    </RadioGroup>

    <EditText
        android:id="@+id/edit_text_zip_code"
        android:layout_width="296dp"
        android:layout_height="39dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/edit_text_zip_code_hint"
        android:enabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
  </android.support.constraint.ConstraintLayout>


  <android.support.constraint.ConstraintLayout
      android:id="@+id/constraintLayout4"
      android:layout_width="340dp"
      android:layout_height="93dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">


    <TextView
        android:id="@+id/text_view_price_filter"
        android:layout_width="181dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_view_price_filter"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/spinners_price"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="15dp"/>

    <Spinner
        android:id="@+id/spinners_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
    </Spinner>


    <TextView
        android:id="@+id/text_view_open_now"
        android:layout_width="179dp"
        android:layout_height="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_view_open_now"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/checkbox_open_now"
        app:layout_constraintTop_toBottomOf="@+id/text_view_price_filter"/>

    <CheckBox
        android:id="@+id/checkbox_open_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/spinners_price"/>

  </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>

